--- a/css/cabecalho-rodape.css
+++ b/css/cabecalho-rodape.css
@@ -87,12 +87,15 @@ footer h3{
 }
 
 #form{
+    width: 90%;
     grid-area: form;
 
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     gap: 1rem;
+
+
 }
 
 .form-item{
