--- a/css/sec-pg1-home.css
+++ b/css/sec-pg1-home.css
@@ -1,5 +1,5 @@
 #bg-sec1{
-    margin-top:-100px;
+    margin-top:-80px;
     background-image: url(../img/bgs/bg\ desktop.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -8,7 +8,7 @@
 }
 
 #home{
-    background-color: rgb(64, 64, 63, 0.65);
+    background-color: rgba(64, 64, 63, 0.507);
     height: 100vh;
 
     display: flex;
