--- a/css/sec-pg1-home.css
+++ b/css/sec-pg1-home.css
@@ -8,7 +8,7 @@
 }
 
 #home{
-    background-color: rgba(64, 64, 63, 0.507);
+    background-color: #40403f81;
     height: 100vh;
 
     display: flex;
